[metadata]
name = pycaptions
version = attr: pycaptions.__init__.__version__
description = PyCaptions, parser and converter for captions formats
long_description = file: README.md
long_description_content_type = text/markdown
author = attr: pycaptions.__init__.__author__
url = https://github.com/adfreelife/PyCaptions
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    beautifulsoup4
    budoux
    langcodes>=3.2.0
    cssutils